--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     font-family: sans-serif;
     display: flex;
@@ -65,4 +70,5 @@ body{
     .post-card{
         flex-direction: column;
     }
+
 }
